# space_nomad

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  tags
assets/: word.template.aseprite
cmake/: FindSDL2.cmake  Findyage.cmake  dependencies.helper.cmake
include/: bejeweled.hpp
include/bejeweled/: bejeweled_engine.hpp  engine.hpp
include/bejeweled/states/: .main_menu.hpp.swo  base_game.hpp  main_menu.hpp
include/bejeweled/widgets/: grid.hpp  grid_event_listener.hpp  grid_generators.hpp  grid_listener.hpp  jewel.hpp  score.hpp
include/tests/widgets/: jewel.fixture.hpp
projects/: bejeweled.vim  breakpoints  make_vs_solution.ps1
src/: bejeweled.cpp
src/states/: base_game.cpp  main_menu.cpp
src/widgets/: grid.cpp  grid_generators.cpp  jewel.cpp  score.cpp
tests/widgets/: jewel.cpp
